# indimail-virtualdomains

./: .gitignore  INSTALL-MINI.md  INSTALL-MYSQL.md  INSTALL-RPM.md  INSTALL-indimail.md  Quick-INSTALL.md  README.md  indimail-doc.odt  prepare_obs
altermime-x/: .gitignore  MIME_headers.c  MIME_headers.h  Makefile.am  README-altermime.md  altermime.1  altermime.c  configure.ac  default.configure  mime_alter.c  pldstr.c  qpe.c
bogofilter-wordlist-1.0/: .gitignore  Makefile.am  README.md  bogofilter-wordlist.spec.in  catChangeLog  configure.ac  default.configure  md5file
bogofilter-wordlist-1.0/debian/: Makefile  bogofilter-wordlist.dsc.in  control  copyright  rules.in
bogofilter-wordlist-x/: .gitignore  Makefile.am  PKGBUILD.in  README.md  bogofilter-wordlist.spec.in  catChangeLog  configure.ac  default.configure  download.sh  training.sh
bogofilter-wordlist-x/debian/: Makefile  bogofilter-wordlist.install  changelog.in  control.in  copyright.in
bogofilter-wordlist-x/doc/: ChangeLog
bogofilter-x/: .gitignore  AUTHORS  COPYING  Doxyfile  Makefile.am  NEWS  NEWS.0  README.git  RELEASE.NOTES  TODO  autogen.sh  catChangeLog  config.in  configure.ac  create_debian  create_rpm  default.configure  indimail-spamfilter-permissions.easy.in  indimail-spamfilter-permissions.paranoid.in  indimail-spamfilter.spec.in
bogofilter-x/bogofilter-wordlist-1.0/: create_debian
bogofilter-x/contrib/: procmailrc.example  randomtrain.sh  trainbogo.sh
bogofilter-x/debian/: README  bogofilter.dsc.in  control  copyright  indimail-spamfilter-Debian_8.0.dsc.in  indimail-spamfilter.dsc.in  indimail-spamfilter.install.in  postinst.in  postrm.in  prerm.in  rules.in
bogofilter-x/doc/: Makefile.am  README.db  bf_compact.1in  bf_copy.1in  bf_tar.1in  bf_tar.htmlin  bogofilter-SA-2005-01  bogofilter-SA-2005-02  bogofilter-SA-2010-01  bogofilter-faq.html  bogofilter.1in  bogofilter.htmlin  bogolexer.1in  bogolexer.htmlin  bogotune-faq.html  bogotune.1in  bogotune.htmlin  bogoupgrade.1in  bogoupgrade.htmlin  bogoutil.1in
bogofilter-x/m4/: gsl.m4
bogofilter-x/src/: Makefile.am  base64.c  base64.h  bf_copy.in  bf_exit.c  bf_tar.in  bogoconfig.h  bogofilter.c  bogofilter.h  bogohist.c  bogohist.h  bogolexer.c  bogomain.h  bogoreader.h  bool.h  buff.c  buff.h  charset.c  charset.h  configfile.c  configtest.c  convert_charset.c  convert_charset.h  convert_unicode.c  datastore.c  datastore_db.c  datastore_db_private.h  datastore_db_trans.c  datastore_kc.c  datastore_qdbm_cmpkey.c  datastore_txn_dummies.c  db_lock.c  error.h  find_home.h  find_home_tildeexpand.c  format.c  (+37 more)
fetchmail-x/: .gitignore  COPYING  Doxyfile  FAQ  INSTALL  Mailbox-Names-UTF7.html  Makefile.am  NEWS  NOTES  README  README.SSL  README.SSL-SERVER  README.packaging  base64.c  checkalias.c  conf-version  conf.c  configure.ac  cram.c  daemon.c  default.configure  delete-colgroup.sed  driver.c  env.c  esrs-design-notes.html  etrn.c  fetchmail-FAQ.html  fetchmail-SA-2021-01.txt  fetchmail-man.html  fetchmail.c  fetchmail.h  fetchmail.man  fetchmail.spec  fetchmailconf.py  fm_md5.h  fm_realpath.c  fm_strl.h  getopt.c  getopt.h  getpass.c  (+54 more)
fortune-x/: .gitignore  Makefile.am  README-fortune.md  configure.ac  copy_fortune.in  default.configure
indimail-x/: .gitignore  AliasInLookup.c  AliasInLookup.h  COPYING  ChangeLog  Check_Login.c  Check_Login.h  CopyEmailFile.c  CopyEmailFile.h  CreateDomainDirs.h  Dirname.h  FifoCreate.c  FifoCreate.h  GetPrefix.c  GetPrefix.h  GetSMTProute.c  GetSMTProute.h  INSTALL-MYSQL.in  INSTALL-RPM.in  INSTALL.in  LoadBMF.c  LoadBMF.h  LoadDbInfo.c  Login_Tasks.c  Login_Tasks.h  MailQuotaWarn.c  MailQuotaWarn.h  MakeArgs.h  Makefile.Darwin  Makefile.Linux  Makefile.am  MoveFile.c  MoveFile.h  NEWS  PKGBUILD.in  ProcessInFifo.c  ProcessInFifo.h  PwdInLookup.c  PwdInLookup.h  Quick-INSTALL.in  (+513 more)
indium-x/: .gitignore  Makefile.am  PKGBUILD.in  catChangeLog  conf-email  configure.ac  create_debian  create_rpm  default.configure  indium-release.in  indium.spec.in  pipe_exec.c  pwhelper.c  tai64.c
ircube-x/: .gitignore  Makefile.am  PKGBUILD.in  README.md  catChangeLog  conf-email  configure.ac  create_rpm  default.configure  ircube-release.in  ircube.spec.in  roundcube_config
iwebadmin-x/: .gitignore  AUTHORS  FAQ  Makefile.am  PKGBUILD.in  README  README-hooks.md  README.hooks  README.md  alias.c  alias.h  auth.c  auth.h  autorespond.c  autorespond.h  catChangeLog  cgi.c  cgi.h  command.c  command.h  common.c  common.h  conf-email  configure.ac  create_debian  create_rpm  default.configure  dotqmail.c  dotqmail.h  env-http.txt  env-https.txt  find_tags  forward.c  forward.h  html.h  iwebadmin-conf  iwebadmin-hooks  iwebadmin-permissions.easy.in  iwebadmin-permissions.paranoid.in  iwebadmin-permissions.secure.in  (+23 more)
logalert-x/: .gitignore  ChangeLog  Makefile.am  PKGBUILD.in  README.md  catChangeLog  common.c  common.h  conf-email  configure.ac  create_debian  create_rpm  default.configure  incrmesg.c  lex.l  log_sig.c  log_sig.h  logalert.spec.in  logclient.1  logclient.c  logsrv.8  logsrv.c  logsrv.man  main.c  monitor.h  parser.y  parsers.h  process.c  rpclog.8  rpclog.c  rpclog.x  showbytes.c  tls.c
mpack-x/: .gitignore  Makefile.am  README-mpack.md  codes.c  configure.ac  decode.c  default.configure  encode.c  md5.h  md5c.c  unixpk.c  uudecode.c  xmalloc.c
nssd-x/: .gitignore  ChangeLog  Makefile.am  README  README-nssd.md  README.md  check_getpw.c  config.c  configure.ac  default.configure  grp.c  load_mysql.c  load_mysql.h  misc.c  nssd.9  nssd.c  nssd.conf.9  nssd_misc.c  nsvs.h  pwd.c  sock.c  spwd.c  util.c
pam-multi-x/: .gitignore  ChangeLog  Makefile.am  README-pam-multi.md  authcheckpassword.in  conf-email  configure.ac  default.configure  imap.in  load_mysql.c  load_mysql.h  pam-checkpwd.8  pam-checkpwd.c  pam-multi.9  pam-multi.c  pam-multi.in  pam-multi.spec.in  pam-support.c  pop3.Darwin  pop3.Linux  pop3.in  sha256_crypt.c  sha512_crypt.c
ripmime-x/: .gitignore  MIME_headers.c  MIME_headers.h  Makefile.am  README-ripmime.md  configure.ac  default.configure  mime.c  pldstr.c  tnef.c
(+1424 files in other folders)
